--- a/lang/fi-FI.json
+++ b/lang/fi-FI.json
@@ -3,7 +3,7 @@
   "gross_income_percent": "Vuosituottoprosentti (brutto)",
   "net_income_per_invested_capita": "Sijoitetun pääoman tuotto",
   "net_income_percent": "Tuottoprosentti",
-  "net_income_per_month": "Tuottoprosentti kuukaudessa",
+  "net_income_per_month": "Tuotto kuukaudessa",
   "income_tax": "Tulovero",
   "gross_rental_income_per_year": "Brutto vuokratuotto vuodessa",
   "rent": "Vuokra",
